frontend/test/should_fail/uniqueofObject_exec.grg
using uniqueTestModelWithoutUniqueDeclarations;

rule t
{
	modify {
	---
		exec( { { uniqueof(new Object())==42 } } );
	}
}
